Wed Sep 28 12:35:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_array/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_interface/cdr_op_cs.cpp:
          Layout changes to the generated code

Wed Sep 28 12:34:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3683_Regression/Echo_i.h:
          Remove workaround

        * tests/IDL_Test/typedef.idl:
        * tests/Smart_Proxies/Collocation/Smart_Proxy_Impl.h:
          Layout changes

Wed Sep 28 12:31:44 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/HandleExhaustion/run_test.pl:
          Added missing GetFile

Wed Sep 28 11:39:31 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/Bug_2241_Regression:
        * tests/Bug_2241_Regression/Bug_2241_Regression.mpc:
        * tests/Bug_2241_Regression/Client_Task.h:
        * tests/Bug_2241_Regression/Client_Task.cpp:
        * tests/Bug_2241_Regression/Collocated_Test.cpp:
        * tests/Bug_2241_Regression/Hello.h:
        * tests/Bug_2241_Regression/Hello.cpp:
        * tests/Bug_2241_Regression/Server_Task.h:
        * tests/Bug_2241_Regression/Server_Task.cpp:
        * tests/Bug_2241_Regression/Test.idl:
        * tests/Bug_2241_Regression/run_test.pl:
        * bin/tao_orb_tests.lst:
        New test for '-ORBCollocationStrategy direct'

Sun Sep 25 17:02:27 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Parallel_Connect_Strategy/run_test.pl:
          Copy only those configuration files that are needed by the targets.
          We don't want to solve this in the test framework; the script knows
          which configuration files should be copied.

Wed Sep 21 13:40:30 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/MT_Client/run_test.pl:
          Removed conf files that are not in the repo at all

Tue Sep 20 06:43:33 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/AMI/run_mt_noupcall.pl: